Fixing extraneous horizontal scrollbar

--- a/client/anoixo-client/src/results/css/Results.css
+++ b/client/anoixo-client/src/results/css/Results.css
@@ -1,4 +1,9 @@
 .results-content {
-    width: 98vw;
+    width: 100%;
+    height: 100%;
+}
+
+.results-paper {
     height: 100vh;
+    width: 98vw;
 }
